# LR-en-C-y-Python

./: .gitignore  README.md
RegresionLineal/: CMakeLists.txt  exeigennorm.cpp  exeigennorm.h  linearregression.cpp  linearregression.h  main.cpp
RegresionLineal/Debug/: RegresionLineal.cbp  RegresionLinealQT.cbp  cmake_install.cmake
RegresionLineal/Debug/.cmake/api/v1/reply/: cache-v2-de77289a5c922bae0de1.json  cmakeFiles-v1-0b5f6c29b4a79177e541.json  codemodel-v2-e852fabafbf1ee95d2ab.json  index-2021-10-24T17-53-52-0707.json  target-RegresionLineal-Debug-5c39a0b050e12e2a04b5.json
RegresionLinealPython/: Segundo_Parcial_Machine.ipynb
